--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,52 @@
 body {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;	
     font-family: 'Times New Roman', Times, sans-serif;
     background-color: #DAF7A6;
 }
   
 header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
 }
   
 header .logo-container {
-	max-width: 200px;
-	margin-right: 20px;
+    max-width: 200px;
+    margin-right: 20px;
 }
   
 header .logo-container img {
-	max-width: 100%;
-	display: block;
-	margin: auto;
+    max-width: 100%;
+    display: block;
+    margin: auto;
 }
   
 nav ul {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	list-style: none;
-	margin: 0;
-	padding: 0;	
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;	
 }
   
 nav li {
-	margin: 0px 20px;
+    margin: 0px 20px;
 }
 
 nav a {
-	text-decoration: none;
-	color: #281F7A;
-	transition: color 0.3s ease-in-out;
+    text-decoration: none;
+    color: #281F7A;
+    transition: color 0.3s ease-in-out;
 }
   
 nav a:hover {
-	color: #fff;
+    color: #fff;
 }
   
 main {
@@ -64,15 +66,15 @@ main {
   
 .cards-container {
     margin-top: 30px;
-	margin-right: 15px;
-	margin-left: 15px;
+    margin-right: 15px;
+    margin-left: 15px;
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* muestra 4 cards por fila */
     grid-gap: 20px;
 }
   
 .card {
-	width: auto;
+    width: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -103,6 +105,7 @@ footer {
     padding: 20px;
     background-color: #333;
     color: #fff;
+    margin-top: auto;
 }
   
 .column {
@@ -134,8 +137,9 @@ footer a:hover {
 }
 
 footer img{
-	width: 6%;
+    width: 6%;
 }
+
 @media (max-width: 767px) { /* para pantallas más pequeñas */
 	header {
 	    flex-direction: column;
@@ -144,25 +148,24 @@ footer img{
 	    margin-top: 20px;
 	}
 	header {
-		flex-direction: column;
-		align-items: center;
+	    flex-direction: column;
+	    align-items: center;
 	}
 	header .logo-container {
-		margin-right: 0;
+	    margin-right: 0;
 	    margin-bottom: 20px;
 	}
-    footer {
+	footer {
 	    flex-direction: column;
-		width: auto;
+	    width: auto;
 	}
 	.column {
 	    margin-top: 20px;
 	}
-    footer ul li{
-        margin-top: 20px;
-    }  
+	footer ul li{
+	    margin-top: 20px;
+	}  
 	.cards-container {
 	    grid-template-columns: 1fr; /* muestra solo 1 card por fila */
 	}
-
 }
